# tracing-sycophancy

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: olmo_checkpoints.txt
data/: if_controls_pe_summary.json
flask_app/: app.py
scripts/: analyze.py  analyze_candidate_robustness.py  analyze_citation_ablation.py  analyze_err_subtypes.py  analyze_length_robustness.py  behavioral_breakdown.py  beta_smoothing.py  classify_err_responses.py  compare_judges.py  csv_to_xlsx.py  evaluate.py  extract_next_token_logits.py  generate_challenges.py  generate_responses.py  length_analysis.py  logprob_breakdown.py  outlier_analysis.py  plot_dlo_heatmap.py  plot_if_controls.py  plot_next_token_logits.py  plot_sampling_distributions.py  preprocess.py  run_inference.py  sample_for_rejudge.py  sampling_experiment.py  score_logprobs.py  validate_judge.py  validate_wrong_answers.py
slurm/: gen_ablation_challenges.sh  rerun_full_pipeline.sh  run_abl_logprobs.sh  run_all_models.sh  run_analysis.sh  run_behavioral_breakdown.sh  run_candidate_robustness.sh  run_citation_ablation.sh  run_err_subclassifier.sh  run_experiment.sh  run_extract_logits.sh  run_if_controls.sh  run_length_analysis.sh  run_length_robustness.sh  run_rejudge.sh  run_robustness_analysis.sh  run_sampling.sh  run_sampling_experiment.sh  setup.sh  setup_container.sh  submit_robustness_checks.sh  test_all_models.sh  test_analyze.sh  test_e2e.sh  test_logprobs.sh  test_single_model.sh  validate_wrong_answers.sh
src/: utils.py
tests/: test_backends.py  test_evaluation.py  test_utils.py
(+35 files in other folders)
