[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tracing-sycophancy"
version = "0.1.0"
description = "Tracing when sycophantic behavior emerges across model training checkpoints"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.60.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "Flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
