[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracing-sycophancy"
version = "0.1.0"
description = "Tracing when sycophantic behavior emerges across model training checkpoints"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "ollama>=0.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",
    "Flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
